--- a/manifest.json
+++ b/manifest.json
@@ -25,5 +25,11 @@
       "js": ["js/content-script.js"],
       "run_at": "document_idle"
     }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["icons/*.png"],
+      "matches": ["https://chat.openai.com/*", "https://chatgpt.com/*"]
+    }
   ]
 }
